@@ -121,6 +121,7 @@
 - Implemented FR #49366 (Make slash escaping optional in json_encode()). (Adam)
 - Implemented FR #48632 (OpenSSL AES support). (yonas dot y
    at gmail dot com, Pierre)
+- Implemented FR #44331 (Formatting option for json_encode). (Adam)
 - Implemented FR #42060 (Add paged Results support). (ando@OpenLDAP.org,
   iarenuno@eteo.mondragon.edu, jeanseb@au-fil-du.net, remy.saissy@gmail.com)
 - Implemented FR #34857 (Change array_combine behaviour when called with empty
